# paddock

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: BaseConfig.cmake  Compiler.cmake  FindDependencies.cmake  PaddockFindPackage.cmake
src/: .clang-format  main.cpp
src/app/: CMakeLists.txt  Program.cpp  Program.hpp  Session.cpp  Session.hpp  main.cpp  resources.cpp  resources.hpp  utils.hpp
src/app/io/: Session.cpp  Session.hpp
src/app/pads/: KorgPadKontrol.cpp  KorgPadKontrol.hpp  KorgPadKontrolProgram.cpp  KorgPadKontrolProgram.hpp  models.hpp  pads.cpp  pads.hpp
src/app/pads/korgPadKontrol/: KnobController.cpp  KnobController.hpp  KnobModel.cpp  KnobModel.hpp  Program.cpp  Program.hpp  ProgramObserver.hpp  RepeaterController.cpp  RepeaterController.hpp  RepeaterModel.cpp  RepeaterModel.hpp  TriggerController.cpp  TriggerController.hpp  TriggerModel.cpp  TriggerModel.hpp  XyController.cpp  XyController.hpp  XyModel.cpp  XyModel.hpp  knobHelpers.hpp
src/core/: CMakeLists.txt  Globals.cpp  Globals.hpp  Log.cpp  Log.hpp  NsmSession.cpp  NsmSession.hpp  Poller.cpp  Poller.hpp  Program.cpp  Program.hpp  Session.cpp  Session.hpp  errors.cpp  errors.hpp  resources.cpp  resources.hpp
src/core/platform/: poll.cpp  poll.hpp
src/core/platform/posix/: poll.hpp
src/io/: CMakeLists.txt  Serializer.hpp
src/midi/: CMakeLists.txt  Client.cpp  Client.hpp  ClientPrivate.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Events.hpp  Mapping.cpp  Mapping.hpp  PortInfo.hpp  SysExStreamTokenizer.hpp  enums.hpp  errors.cpp  errors.hpp  eventPrinters.hpp  events.hpp  noteNames.hpp  sysex.hpp  types.hpp
src/midi/pads/: KorgPadKontrol.cpp  KorgPadKontrol.hpp  pads.hpp
src/midi/pads/korgPadKontrol/: Program.cpp  Program.hpp  Scene.cpp  Scene.hpp  enums.hpp  nativeEventPrinters.hpp  nativeEvents.cpp  nativeEvents.hpp  scenePrinters.hpp  sysex.hpp
src/midi/platform/alsa/: Engine.cpp  Engine.hpp  RawMidi.cpp  RawMidi.hpp  Sequencer.cpp  Sequencer.hpp  events.cpp  events.hpp  utils.cpp  utils.hpp
src/midi/tests/: CMakeLists.txt  sceneEncoding.cpp
src/ui/: CMakeLists.txt  Styling.cpp  Styling.hpp  module.cpp  module.hpp  resources.cpp  resources.hpp
src/ui/qml/: module.cpp  resources.qrc
src/ui/qml/Paddock/: ControllerLayout.qml  MainWindow.qml  MenuBar.qml  MenuItem.qml  qmldir
src/ui/qml/Paddock/Controls/: Axis.qml  IconButton.qml  Knob.qml  KnobAction.qml  Pad.qml  TextButton.qml  qmldir
src/ui/qml/Paddock/Pads/: KorgPadKontrol.qml  qmldir
src/ui/qml/Paddock/Pads/KorgPadKontrol/: Controller.qml  KnobSection.qml  RepeaterSection.qml  TriggerRepeater.qml  TriggerSection.qml  XySection.qml  qmldir
src/ui/qml/icons/default/: index.theme
src/utils/: CMakeLists.txt  Expected.hpp  byte.hpp  encodings.cpp  encodings.hpp  mp.hpp  overloaded.hpp
src/utils/tests/: CMakeLists.txt  encodings.cpp
